# branch-renderer

./: .gitignore  CMakeLists.txt  README.md  main.cpp
core/: globals.cpp  globals.hpp  window.cpp
entity/: entity.hpp  entity_manager.cpp  entity_manager.hpp
light/: depth_map.hpp  depth_map_2d.cpp  depth_map_2d.hpp  depth_map_cube.cpp  depth_map_cube.hpp  dir_light.hpp  light.hpp  point_light.cpp  point_light.hpp  spotlight.hpp
physics/: physics_component.h  physics_system.h
renderer/: model_loading_system.h  render_components.hpp  renderer.cpp  renderer.h  renderer.hpp  shader.hpp  shader_manager.cpp  shader_manager.hpp
scene/: mesh.hpp  mesh_object.hpp
shaders/: aabb.fs
